[package]
name = "nnmf_nalgebra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.32.1", features = ["rand"] }
rand = "0.8.5"

[package.metadata.nix]
app = true
build = true
